# ethereum-lightclient-canister

./: Cargo.toml  build.sh  canister_ids.json  dfx.json  start.sh  start_oracle.sh  upgrade.sh  xc  xx  xx.txt  xxc
src/: xxx
src/client/: Cargo.toml
src/client/src/: client.rs  database.rs  errors.rs  lib.rs  node.rs  rpc.rs
src/common/: Cargo.toml
src/common/src/: bytes.rs  consensus_spec.rs  errors.rs  http.rs  icp.rs  lib.rs  utils.rs
src/common/src/rpc_types/: address.rs  block.rs  bls.rs  bootstrap.rs  convert.rs  finality_update.rs  lightclient_header.rs  lightclient_store.rs  mod.rs  optimistic_update.rs  serde_utils.rs  update.rs
src/config/: Cargo.toml
src/config/src/: checkpoints.rs
src/config/tests/: checkpoints.rs
src/consensus/: Cargo.toml  xx
src/consensus/consensus-core/: Cargo.toml
src/consensus/consensus-core/src/: consensus_core.rs
src/consensus/consensus-core/src/types/: mod.rs  serde_utils.rs
src/consensus/src/: builder.rs  consensus.rs  lib.rs  types.rs
src/consensus/src/config/: base.rs  checkpoints.rs  mod.rs  networks.rs
src/consensus/src/rpc/: http_rpc.rs  mock_rpc.rs  mod.rs  nimbus_rpc.rs
src/contracts-abi/: Cargo.toml
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/client/: mod.rs  node.rs  rpc.rs
src/core/src/execution/: mod.rs  state.rs
src/core/src/execution/rpc/: http_rpc.rs
src/ethereum-lightclient-canister/: Cargo.toml  candid.did
src/ethereum-lightclient-canister/src/: erc20.rs  guard.rs  helios.rs  ic_consensus_rpc.rs  ic_execution_rpc.rs  ic_log.rs  lib.rs  random.rs  rpc.rs  stable_memory.rs  state.rs  state_profile.rs  storable_structures.rs  tasks.rs  utils.rs
src/ethereum-lightclient-canister/src/config/: base.rs  checkpoints.rs  mod.rs  networks.rs
src/ethereum-lightclient-canister/src/consensus/: builder.rs  config.rs  consensus.rs  consensus_spec.rs  core.rs  database.rs  errors.rs  mod.rs  proof.rs  spec.rs  utils.rs
src/ethereum-lightclient-canister/src/rpc_types/: address.rs  block.rs  bls.rs  bootstrap.rs  convert.rs  finality_update.rs  fixedbytes.rs  lightclient_header.rs  lightclient_store.rs  mod.rs  optimistic_update.rs  serde_utils.rs  u256.rs  update.rs
src/ethereum-lightclient-canister/tests/: canister.rs
src/ethereum-oracle/: Cargo.toml  candid.did  xxx
src/ethereum-oracle/src/: ic_execution_rpc.rs  lib.rs  service.rs  stable_memory.rs  state.rs
src/ethereum-oracle/src/rpc_types/: log.rs  mod.rs  receipt.rs  serde_data.rs  serde_u64.rs
src/execution/: Cargo.toml
src/execution/src/: errors.rs  evm.rs  execution.rs  proof.rs  types.rs
src/execution/src/rpc/: http_rpc.rs  mock_rpc.rs  mod.rs
src/execution/tests/: execution.rs
src/ssz_types/: Cargo.toml
src/ssz_types/src/: fixed_vector.rs  variable_list.rs
src/tree_hash/: Cargo.toml
src/tree_hash/src/: fixed_bytes.rs  impls.rs  lib.rs  u256.rs
