[workspace]
members = ["src/*"]
resolver = "2"

[workspace.dependencies]
contracts-abi = { path = "src/contracts-abi" }
ethers-contract = { version = "2.0.9", default-features = false, features = [
  "abigen",
] }
ethers-core = "2.0.9"
eyre = "0.6.8"
helios_client = { package = "client", path = "src/client"}
helios_common = { package = "common", path = "src/common" }
helios_config = { package = "config", path = "src/config" }
helios_execution = { package = "execution", path = "src/execution" }
interface = { path = "src/interface" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Uncomment to apply local changes of Helios
#[patch.'https://github.com/eigerco/helios']
#client = { path = "../helios/client" }
#common = { path = "../helios/common" }
#config = { path = "../helios/config" }
#execution = { path = "../helios/execution" }
