[package]
name = "client"
version = "0.4.1"
edition = "2021"

[dependencies]
arc-swap = "1.6.0"
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
hex = "0.4.3"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
ethers-core = { version = "2.0.8", default-features = false }
futures = "0.3.23"
log = "0.4.17"
thiserror = "1.0.37"

common = { path = "../common" }
consensus = { path = "../consensus" }
helios-consensus-core = { path = "../consensus/consensus-core"}
helios-core = {path = "../core"}
#execution = { path = "../execution" }
config = { path = "../config" }
ic-cdk-timers = "0.4.0"
ic-cdk = "0.10.0"
getrandom = { version = "0.2", features = ["js"] }