[package]
name = "common"
version = "0.4.1"
edition = "2021"

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.103"
hex = "0.4.3"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
ethers-core = "2.0.8"
thiserror = "1.0.37"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk = "0.10.0"
candid = "0.9.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.11.18"
