[package]
name = "common"
version = "0.4.1"
edition = "2021"

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.103"
hex = "0.4.3"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
thiserror = "1.0.37"
typenum = "1.18.0"
rlp = "0.6.1"

ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk.workspace = true
candid.workspace = true
getrandom = { version = "0.2.8", features = ["js"] }
ic_bls12_381.workspace = true
sha2.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true