[package]
name = "consensus"
version = "0.4.1"
edition = "2021"

[dependencies]
eyre = "0.6.8"
futures = "0.3.23"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
hex = "0.4.3"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
milagro_bls = { git = "https://github.com/Snowfork/milagro_bls" }
ethers-core = { version = "2.0.8", default-features = false }
bytes = "1.2.1"
toml = "0.5.9"
async-trait = "0.1.57"
log = "0.4.17"
chrono = { version = "0.4.23", default-features = false }
thiserror = "1.0.37"
superstruct = "0.7.0"

common = { path = "../common" }
config = { path = "../config" }

ic-cdk = "0.10.0"

alloy = { version = "0.9.1", features = [
    "consensus",
    "rpc-types",
    "ssz",
    "rlp",
    "k256",
    "eips",
] }
alloy-rlp = "0.3.10"