[package]
name = "ethereum_lightclient_canister"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = { workspace = true }

helios_common = { workspace = true }
#helios_config = { workspace = true }
#helios-core = {path = "../core"}
#helios-consensus-core = {path = "../consensus/consensus-core"}
#helios-consensus = {package = "consensus", path = "../consensus"}
ssz_types.workspace = true
ciborium = "0.2.1"
candid = "0.9.2"
#getrandom = { version = "0.2.10", features = ["custom", "js"] }
ic-cdk = "0.11.0"
ic-cdk-timers = "0.4.0"
ic-logger = "0.1.0"
ic-stable-structures = "0.6.5"
log = "0.4.19"
num-bigint = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = "1.0.183"
serde_json = "1.0.104"
anyhow = "1.0.72"
async-trait = "0.1.86"


# consensus
tree_hash.workspace = true

# config
figment = { version = "0.10.7", features = ["toml", "env"] }
serde_yaml = "0.9.14"
strum = { version = "0.26.2", features = ["derive"] }
url = {version = "2.5.0", features = ["serde"] }

# async/futures
tokio.workspace = true
futures.workspace = true

# io

hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
superstruct.workspace = true
retri.workspace = true
typenum.workspace = true
sha2 = "0.10.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.8", features = ["js"] }


[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }
