[package]
name = "tree_hash"
version = "0.9.0"
edition = "2021"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
ethereum_hashing = "0.7.0"
ethereum_ssz = "0.8.0"
smallvec = "1.6.1"
typenum = "1.12.0"
getrandom = { version = "0.2.8", features = ["js"] }
hex = "0.4"
serde = "1.0.183"
candid.workspace = true
serde_json = "1.0.104"
candid_derive = "0.6.6"
derive_more = { version = "1", features = ["full"] }
ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { version = "0.9.0" }
ethereum_ssz_derive = "0.8.0"
